--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 django = "^5.1.1"
 django-tailwind = {extras = ["reload"], version = "^3.8.0"}
 pillow = "^11.0.0"
+dotenv = "^0.9.9"
 
 
 [build-system]
